--- a/back-code/package.json
+++ b/back-code/package.json
@@ -14,6 +14,9 @@
   },
   "devDependencies": {
     "@types/koa": "^2.13.1",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
+    "eslint": "^7.22.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
